2012-04-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/functions_Test.pl
	(test_getNodeContent_incorrectChildName): test if getNodeContent()
	correctly returns 0 if no child exist with the given name.
	* src/foswiki_plugin/functions.pm (getNodeContent): returns 0
	if the searched node name cannot be found.
	* src/foswiki_plugin/DEPENDENCIES: added Test::Unit::Procedural for
	unit tests running.

	* configure.in: generate both pkg-config file for libclient and
	libserver.
	* src/libserver/rainbrurpg-meta-server.pc.in: first version of the
	pkg-config compliant file.
	* src/libclient/rainbrurpg-meta-client.pc.in: first version of the
	pkg-config compliant file.

2012-03-04  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: add AC_CONFIG_HEADERS([config.h]).

	* configure.in (RB_META_URL): created configure option and
	summary details.

2012-02-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/function.pm (getServerList): returns an
	empty table if XML file not found.
	* src/foswiki_plugin/server_list.xml: added example xml file.

2012-02-23  Jérôme Pasquier  <rainbru@free.fr>

	* src/foswiki_plugin/RainbrurpgMetaserverPlugin.txt: improved
	plugin's documentation.

	* src/foswiki_plugin/README : Updated installation instructions
	and added dependencies list.

2012-01-19  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in : add a configuration summary.
	* configure.in (RB_FOSWIKI_DIR): create option for the foswiki
	installation directory.

	* src/foswiki_plugin/Makefile.am : three install prefix for
	documentation and source code of foswiki plugin.

2012-01-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/ : libclient and libserver directories added with README.
	* src/foswiki_plugin : code and documentation move here.